// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RadioCheckbox incorporates user styles if passed 1`] = `
<input
  aria-label={undefined}
  data-radium={true}
  id={1}
  onClick={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  style={
    Object {
      "-moz-appearance": "none",
      "-webkit-appearance": "none",
      "appearance": "none",
      "backgroundColor": "transparent",
      "backgroundImage": "url(undefined)",
      "backgroundPosition": "top left",
      "backgroundRepeat": "no-repeat",
      "backgroundSize": "contain",
      "border": "2px solid purple",
      "height": 22,
      "margin": "0 10px -7px 0",
      "width": 22,
    }
  }
  type="radio"
  value={undefined}
/>
`;

exports[`RadioCheckbox incorporates user styles if passed 2`] = `
<input
  aria-label={undefined}
  data-radium={true}
  id={2}
  onClick={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  style={
    Object {
      "-moz-appearance": "none",
      "-webkit-appearance": "none",
      "appearance": "none",
      "backgroundColor": "transparent",
      "backgroundImage": "url(undefined)",
      "backgroundPosition": "top left",
      "backgroundRepeat": "no-repeat",
      "backgroundSize": "contain",
      "height": 22,
      "margin": "0 10px -7px 0",
      "width": 22,
    }
  }
  type="radio"
  value={undefined}
/>
`;

exports[`RadioCheckbox renders the correct button type 1`] = `
<input
  aria-label={undefined}
  data-radium={true}
  id={1}
  onClick={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  style={
    Object {
      "-moz-appearance": "none",
      "-webkit-appearance": "none",
      "appearance": "none",
      "backgroundColor": "transparent",
      "backgroundImage": "url(undefined)",
      "backgroundPosition": "top left",
      "backgroundRepeat": "no-repeat",
      "backgroundSize": "contain",
      "height": 22,
      "margin": "0 10px -7px 0",
      "width": 22,
    }
  }
  type="checkbox"
  value={undefined}
/>
`;

exports[`RadioCheckbox renders the correct button type 2`] = `
<input
  aria-label={undefined}
  data-radium={true}
  id={2}
  onClick={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  style={
    Object {
      "-moz-appearance": "none",
      "-webkit-appearance": "none",
      "appearance": "none",
      "backgroundColor": "transparent",
      "backgroundImage": "url(undefined)",
      "backgroundPosition": "top left",
      "backgroundRepeat": "no-repeat",
      "backgroundSize": "contain",
      "height": 22,
      "margin": "0 10px -7px 0",
      "width": 22,
    }
  }
  type="radio"
  value={undefined}
/>
`;

exports[`RadioCheckbox renders the correct button type 3`] = `
<input
  aria-label={undefined}
  data-radium={true}
  id={3}
  onClick={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  style={
    Object {
      "-moz-appearance": "none",
      "-webkit-appearance": "none",
      "appearance": "none",
      "backgroundColor": "transparent",
      "backgroundImage": "url(undefined)",
      "backgroundPosition": "top left",
      "backgroundRepeat": "no-repeat",
      "backgroundSize": "contain",
      "height": 22,
      "margin": "0 10px -7px 0",
      "width": 22,
    }
  }
  type="radio"
  value={undefined}
/>
`;

exports[`RadioCheckbox renders the correct checked state 1`] = `
<input
  aria-label={undefined}
  data-radium={true}
  id={1}
  onClick={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  style={
    Object {
      "-moz-appearance": "none",
      "-webkit-appearance": "none",
      "appearance": "none",
      "backgroundColor": "transparent",
      "backgroundImage": "url(undefined)",
      "backgroundPosition": "top left",
      "backgroundRepeat": "no-repeat",
      "backgroundSize": "contain",
      "height": 22,
      "margin": "0 10px -7px 0",
      "width": 22,
    }
  }
  type="radio"
  value={undefined}
/>
`;

exports[`RadioCheckbox renders the correct checked state 2`] = `
<input
  aria-label={undefined}
  data-radium={true}
  id={2}
  onClick={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  style={
    Object {
      "-moz-appearance": "none",
      "-webkit-appearance": "none",
      "appearance": "none",
      "backgroundColor": "transparent",
      "backgroundImage": "url(undefined)",
      "backgroundPosition": "top left",
      "backgroundRepeat": "no-repeat",
      "backgroundSize": "contain",
      "height": 22,
      "margin": "0 10px -7px 0",
      "width": 22,
    }
  }
  type="radio"
  value={undefined}
/>
`;

exports[`RadioCheckbox renders the correct checked state 3`] = `
<input
  aria-label={undefined}
  data-radium={true}
  id={3}
  onClick={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  style={
    Object {
      "-moz-appearance": "none",
      "-webkit-appearance": "none",
      "appearance": "none",
      "backgroundColor": "transparent",
      "backgroundImage": "url(undefined)",
      "backgroundPosition": "top left",
      "backgroundRepeat": "no-repeat",
      "backgroundSize": "contain",
      "height": 22,
      "margin": "0 10px -7px 0",
      "width": 22,
    }
  }
  type="radio"
  value={undefined}
/>
`;
